--- a/proctest.cabal
+++ b/proctest.cabal
@@ -1,30 +1,37 @@
-Name:          proctest
-Version:       0.1
-License:       MIT
-Author:        Niklas Hambüchen
-Category:      Testing
-Build-type:    Simple
-Cabal-version: >= 1.10
+name:          proctest
+version:       0.1
+license:       MIT
+author:        Niklas Hambüchen
+copyright:     Copyright: (c) 2012 Niklas Hambüchen
+category:      Testing
+stability:     experimental
+homepage:      https://github.com/nh2/proctest
+bug-reports:   https://github.com/nh2/proctest/issues
 
-Library
-  Default-language: Haskell2010
-  Exposed-modules:
+build-type:    Simple
+cabal-version: >= 1.10
+
+
+library
+  default-language: Haskell2010
+  exposed-modules:
     Test.Proctest
-  Build-depends:
+  build-depends:
       base
     , process >= 1.1.0.1
     , bytestring
     , text
   ghc-options:
-      -Wall
+    -Wall
 
-Executable example-netcat-test
-  Default-language: Haskell2010
-  Hs-source-dirs:
+
+executable example-netcat-test
+  default-language: Haskell2010
+  hs-source-dirs:
     ., examples
-  Main-is:
+  main-is:
     netcat-test.hs
-  Build-depends:
+  build-depends:
       base
     , process
     , bytestring
