--- a/proctest.cabal
+++ b/proctest.cabal
@@ -29,12 +29,14 @@ cabal-version: >= 1.10
 library
   default-language: Haskell2010
   exposed-modules:
-    Test.Proctest
+      Test.Proctest
+    , Test.Proctest.Assertions
   build-depends:
       base >= 4 && <= 5
     , process >= 1.1.0.1
     , bytestring
     , text
+    , HUnit
   ghc-options:
     -Wall
 
@@ -55,4 +57,3 @@ executable example-netcat-test
     , QuickCheck >= 2.4.2
   ghc-options:
     -threaded -fwarn-unused-imports
- 
